[gd_scene load_steps=4 format=3 uid="uid://5bialtnylpep"]

[ext_resource type="Script" path="res://scenes/farm_entity/tree/wood_tres.gd" id="1_sbuuf"]
[ext_resource type="SpriteFrames" uid="uid://kisrgugksnvd" path="res://scenes/farm_entity/resource/pine.tres" id="2_mloct"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_j3tyo"]
radius = 7.0
height = 16.0

[node name="WoodTree" type="StaticBody2D"]
collision_mask = 0
input_pickable = true
script = ExtResource("1_sbuuf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -13)
sprite_frames = ExtResource("2_mloct")
animation = &"1"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_j3tyo")

[node name="Timer" type="Timer" parent="."]

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
